force-app/main/default/objects/IT_Dashboard_Controller__mdt/IT_Dashboard_Controller__mdt.object-meta.xml
<CustomObject>
    <label>IT Dashboard Controller</label>
    <pluralLabel>IT Dashboard Controller</pluralLabel>
</CustomObject>