force-app/main/default/objects/IT_Dashboard_Controller__mdt/fields/Alert_Disable_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Alert_Disable_End_Time__c</fullName>
    <description>End time till when the email alert would not be sent.</description>
    <inlineHelpText>Enter time in 24 hours format</inlineHelpText>
    <label>Alert Disable End Time (HH:MM:SS)</label>
    <length>8</length>
    <type>Text</type>
</CustomField>