force-app/main/default/objects/IT_Dashboard_Controller__mdt/fields/Alert_Interval__c.field-meta.xml
<CustomField>
    <fullName>Alert_Interval__c</fullName>
    <description>The frequency at which alert validation will happen</description>
    <inlineHelpText>The frequency at which alert validation will happen</inlineHelpText>
    <label>Alert Check Frequency (in Minutes)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
            </value>
            <value>
                <fullName>05</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>15</fullName>
                <default>true</default>
                <label>15</label>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>150</fullName>
            </value>
            <value>
                <fullName>180</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>