force-app/main/default/objects/IT_Dashboard_Controller__mdt/fields/Alert_Message__c.field-meta.xml
<CustomField>
    <fullName>Alert_Message__c</fullName>
    <description>The alert message that will be sent as part of email</description>
    <inlineHelpText>The alert message that will be sent as part of email</inlineHelpText>
    <label>Alert Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>