force-app/main/default/objects/IT_Dashboard_Controller__mdt/fields/Alert_Needed__c.field-meta.xml
<CustomField>
    <fullName>Alert_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is alert applicable?</description>
    <inlineHelpText>Is alert applicable?</inlineHelpText>
    <label>Alert Needed?</label>
    <type>Checkbox</type>
</CustomField>