force-app/main/default/objects/IT_Dashboard_Controller__mdt/fields/Alert_on_Weekend__c.field-meta.xml
<CustomField>
    <fullName>Alert_on_Weekend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, alert will be checked &amp; sent on weekends also</description>
    <inlineHelpText>If checked, alert will be checked &amp; sent on weekends also</inlineHelpText>
    <label>Alert on Weekend?</label>
    <type>Checkbox</type>
</CustomField>