force-app/main/default/objects/IT_Dashboard_Controller__mdt/fields/Alert_Time__c.field-meta.xml
<CustomField>
    <fullName>Alert_Time__c</fullName>
    <defaultValue>&apos;NA&apos;</defaultValue>
    <description>Applicable only if Controller Value returns a DateTime. Alert will be sent, if Controller Value &gt;= Alert Value.
Enter &apos;NA&apos;, if not applicable.</description>
    <inlineHelpText>Alert will be sent matching at this time. Enter &apos;NA&apos;, if not applicable.</inlineHelpText>
    <label>Alert Time (in Hours)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
                <default>true</default>
                <label>NA</label>
            </value>
            <value>
                <fullName>00</fullName>
            </value>
            <value>
                <fullName>01</fullName>
            </value>
            <value>
                <fullName>02</fullName>
            </value>
            <value>
                <fullName>03</fullName>
            </value>
            <value>
                <fullName>04</fullName>
            </value>
            <value>
                <fullName>05</fullName>
            </value>
            <value>
                <fullName>06</fullName>
            </value>
            <value>
                <fullName>07</fullName>
            </value>
            <value>
                <fullName>08</fullName>
            </value>
            <value>
                <fullName>09</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>16</fullName>
            </value>
            <value>
                <fullName>17</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>19</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
            <value>
                <fullName>22</fullName>
            </value>
            <value>
                <fullName>23</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>