force-app/main/default/objects/IT_Dashboard_Controller__mdt/fields/Alert_Value__c.field-meta.xml
<CustomField>
    <fullName>Alert_Value__c</fullName>
    <description>Applicable only if Controller Value returns an Integer. Alert will be sent, if (Controller Value &gt; Alert Value and Alert Value Reverse Check = False) or (Controller Value &lt;= Alert Value and Alert Value Reverse Check = True).</description>
    <inlineHelpText>Applicable only if Controller Value returns an Integer. Alert will be sent, if (Controller Value &gt; Alert Value and Alert Value Reverse Check = False) or (Controller Value &lt;= Alert Value and Alert Value Reverse Check = True).</inlineHelpText>
    <label>Alert Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>