force-app/main/default/objects/IT_Dashboard_Controller__mdt/fields/Alert_Value_Reverse_Check__c.field-meta.xml
<CustomField>
    <fullName>Alert_Value_Reverse_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alert Value Reverse Check</label>
    <type>Checkbox</type>
</CustomField>