force-app/main/default/objects/IT_Dashboard_Controller__mdt/fields/Controller_Value__c.field-meta.xml
<CustomField>
    <fullName>Controller_Value__c</fullName>
    <description>Used for internal calculation.
If value is SOQL, it must return an Aggregate result with label as &apos;rslt&apos;, e.g. select count(id)rslt from account</description>
    <inlineHelpText>Used for internal calculation.
If value is SOQL, it must return an Aggregate result with label as &apos;rslt&apos;, e.g. select count(id)rslt from account</inlineHelpText>
    <label>Controller Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>