force-app/main/default/objects/IT_Dashboard_Controller__mdt/fields/Controller_Value_Return_Type__c.field-meta.xml
<CustomField>
    <fullName>Controller_Value_Return_Type__c</fullName>
    <description>Output result of controller value</description>
    <inlineHelpText>Output result of controller value</inlineHelpText>
    <label>Controller Value Return Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>String</fullName>
                <default>true</default>
                <label>String</label>
            </value>
            <value>
                <fullName>Integer</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>DateTime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>