force-app/main/default/objects/IT_Dashboard_Controller__mdt/fields/Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Label__c</fullName>
    <description>Display Label on Dashboard</description>
    <inlineHelpText>Display Label on Dashboard</inlineHelpText>
    <label>Display Label</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>