force-app/main/default/objects/IT_Dashboard_Controller__mdt/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <description>Order of display on dashboard</description>
    <inlineHelpText>Order of display on dashboard</inlineHelpText>
    <label>Display Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>