force-app/main/default/objects/IT_Dashboard_Controller__mdt/fields/Invisible_on_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Invisible_on_Dashboard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hidden on Dashboard</label>
    <type>Checkbox</type>
</CustomField>