force-app/main/default/objects/IT_Dashboard_Controller__mdt/fields/Repeat_Alert__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If set to true, an email alert will be sent repeatedly for the specified time interval.
This option is applicable only if &apos;Alert Needed?&apos; is checked.</inlineHelpText>
    <label>Repeat Alert</label>
    <type>Checkbox</type>
</CustomField>