force-app/main/default/objects/IT_Dashboard_Controller__mdt/fields/Repeat_Alert_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Alert_Frequency__c</fullName>
    <label>Repeat Alert Frequency (In Minutes)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>05</fullName>
                <default>true</default>
                <label>05</label>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>150</fullName>
            </value>
            <value>
                <fullName>180</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>