force-app/main/default/objects/IT_Dashboard_Controller__mdt/fields/Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Section_Name__c</fullName>
    <description>Section Label on dashboard, update the picklist label, if display label has to be changed.</description>
    <inlineHelpText>Section Label on dashboard, update the picklist label, if display label has to be changed.</inlineHelpText>
    <label>Section Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deal</fullName>
                <default>true</default>
                <label>Today&apos;s Deals</label>
            </value>
            <value>
                <fullName>Dave</fullName>
                <label>Today&apos;s Hedge</label>
            </value>
            <value>
                <fullName>Price</fullName>
                <label>Live Price Value Last Updated At</label>
            </value>
            <value>
                <fullName>MRC Upload</fullName>
                <label>MRC Uploads via Mulesoft</label>
            </value>
            <value>
                <fullName>Batch</fullName>
                <label>Batch Jobs</label>
            </value>
            <value>
                <fullName>Daily Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>