force-app/main/default/objects/IT_Dashboard_Controller__mdt/fields/StopOLF__c.field-meta.xml
<CustomField>
    <fullName>StopOLF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop OLF on Error</label>
    <type>Checkbox</type>
</CustomField>