force-app/main/default/objects/IT_Dashboard_Controller__mdt/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <inlineHelpText>Specify Time Zone for which &apos;Alert Disable Start Time&apos; and &apos;Alert Disable End Time&apos; will be considered.</inlineHelpText>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pacific/Kiritimati</fullName>
            </value>
            <value>
                <fullName>Pacific/Chatham</fullName>
            </value>
            <value>
                <fullName>Pacific/Auckland</fullName>
            </value>
            <value>
                <fullName>Pacific/Enderbury</fullName>
            </value>
            <value>
                <fullName>Pacific/Fiji</fullName>
            </value>
            <value>
                <fullName>Pacific/Tongatapu</fullName>
            </value>
            <value>
                <fullName>Asia/Kamchatka</fullName>
            </value>
            <value>
                <fullName>Pacific/Norfolk*</fullName>
            </value>
            <value>
                <fullName>Australia/Lord_Howe</fullName>
            </value>
            <value>
                <fullName>Australia/Sydney</fullName>
            </value>
            <value>
                <fullName>Pacific/Guadalcanal</fullName>
            </value>
            <value>
                <fullName>Australia/Adelaide</fullName>
            </value>
            <value>
                <fullName>Australia/Darwin</fullName>
            </value>
            <value>
                <fullName>Asia/Seoul</fullName>
            </value>
            <value>
                <fullName>Asia/Tokyo</fullName>
            </value>
            <value>
                <fullName>Asia/Hong_Kong</fullName>
            </value>
            <value>
                <fullName>Asia/Kuala_Lumpur</fullName>
            </value>
            <value>
                <fullName>Asia/Manila</fullName>
            </value>
            <value>
                <fullName>Asia/Shanghai</fullName>
            </value>
            <value>
                <fullName>Asia/Singapore</fullName>
            </value>
            <value>
                <fullName>Asia/Taipei</fullName>
            </value>
            <value>
                <fullName>Australia/Perth</fullName>
            </value>
            <value>
                <fullName>Asia/Bangkok</fullName>
            </value>
            <value>
                <fullName>Asia/Ho_Chi_Minh</fullName>
            </value>
            <value>
                <fullName>Asia/Jakarta</fullName>
            </value>
            <value>
                <fullName>Asia/Rangoon</fullName>
            </value>
            <value>
                <fullName>Asia/Dhaka</fullName>
            </value>
            <value>
                <fullName>Asia/Yekaterinburg</fullName>
            </value>
            <value>
                <fullName>Asia/Kathmandu</fullName>
            </value>
            <value>
                <fullName>Asia/Colombo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>