force-app/main/default/objects/IT_Dashboard_Controller__mdt/validationRules/Alert_Disable_Time_Format_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Alert_Disable_Time_Format_Validation</fullName>
    <active>true</active>
    <description>Validate input format for Alert Disable Start Time (HH:MM:SS) and Alert Disable End Time (HH:MM:SS) fields</description>
    <errorConditionFormula>OR(AND(NOT(ISBLANK(Alert_Disable_Start_Time__c)), NOT(REGEX(Alert_Disable_Start_Time__c, &apos;^([0-9]|0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]$&apos;))), AND(NOT(ISBLANK(Alert_Disable_End_Time__c)), NOT(REGEX(Alert_Disable_End_Time__c, &apos;^([0-9]|0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]$&apos;))))</errorConditionFormula>
    <errorMessage>&apos;Alert Disable Start Time (HH:MM:SS)&apos; and &apos;Alert Disable End Time (HH:MM:SS)&apos; should have valid input format (HH:MM:SS).</errorMessage>
</ValidationRule>