force-app/main/default/objects/IT_Dashboard_Controller__mdt/listViews/Controller_MDT.listView-meta.xml
<ListView>
    <fullName>Controller_MDT</fullName>
    <columns>Section_Name__c</columns>
    <columns>Display_Order__c</columns>
    <columns>Display_Label__c</columns>
    <columns>Controller_Value__c</columns>
    <columns>Controller_Value_Return_Type__c</columns>
    <columns>Alert_Needed__c</columns>
    <columns>Alert_Interval__c</columns>
    <columns>Alert_Time__c</columns>
    <columns>Alert_Value__c</columns>
    <columns>Invisible_on_Dashboard__c</columns>
    <columns>Alert_on_Weekend__c</columns>
    <columns>Save_Error__c</columns>
    <columns>StopOLF__c</columns>
    <filterScope>Everything</filterScope>
    <label>Controller MDT</label>
    <language>en_US</language>
</ListView>